tests/fail/push_no_arg.avm
; push with no arguments
push
push;int8(16)
push ;int8(16)
